init style time-remaining

--- a/src/assets/scss/_custom.scss
+++ b/src/assets/scss/_custom.scss
@@ -1,3 +1,11 @@
 @import "../../../node_modules/bootstrap/scss/bootstrap.scss";
 
-$primary: #d8813c;
+.btn-rounded {
+  border-radius: 2rem;
+}
+
+.card-header,
+.card-footer {
+  border: unset;
+  background: unset;
+}
