init style question

--- a/src/assets/scss/style.scss
+++ b/src/assets/scss/style.scss
@@ -2,6 +2,7 @@
 @import "color";
 @import "components/card";
 @import "components/time-remaining";
+@import "components/question";
 
 body {
   background-color: #f5f7f9;
