init style question-history

--- a/src/assets/scss/style.scss
+++ b/src/assets/scss/style.scss
@@ -3,6 +3,7 @@
 @import "components/card";
 @import "components/time-remaining";
 @import "components/question";
+@import "components/question-history";
 
 body {
   background-color: #f5f7f9;
