--- a/src/assets/scss/components/_question.scss
+++ b/src/assets/scss/components/_question.scss
@@ -51,7 +51,6 @@
   }
 
   &__options {
-    counter-reset: item;
     list-style-type: none;
     margin: 0;
     padding-left: 2.25rem;
@@ -71,9 +70,8 @@
         display: flex;
         justify-content: center;
         align-items: center;
-        border: 1px solid transparent;
+        border: 1px solid $gray;
         border-radius: 50%;
-        border-color: $gray;
       }
 
       &:hover span {
