--- a/src/assets/scss/style.scss
+++ b/src/assets/scss/style.scss
@@ -4,6 +4,7 @@
 @import "components/time-remaining";
 @import "components/question";
 @import "components/question-history";
+@import "components/button";
 
 body {
   background-color: #f5f7f9;
