--- a/src/assets/scss/components/_question.scss
+++ b/src/assets/scss/components/_question.scss
@@ -80,6 +80,8 @@
         align-items: center;
         border: 1px solid $gray;
         border-radius: 50%;
+        transition: color 0.15s ease-in-out, background-color 0.15s ease-in-out,
+          border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
       }
 
       &:hover span {
