--- a/src/assets/scss/style.scss
+++ b/src/assets/scss/style.scss
@@ -5,6 +5,7 @@
 @import "components/question";
 @import "components/question-history";
 @import "components/button";
+@import "components/review-modal";
 
 body {
   background-color: #f5f7f9;
